syntax = "proto3";
package tails.paws.v1;

import "google/protobuf/any.proto";

service ConfigAPI {
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {}
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse) {}
}

message GetConfigRequest {
  string key = 1;
}

message GetConfigResponse {
  string value = 1;
}

message SetConfigRequest {
  string key = 1;
  google.protobuf.Any value = 2;
}

message SetConfigResponse {
  string status = 1;
}
